@@ -43,3 +43,4 @@
 + Can now set thumbnail dimensions from settings
 + All thumbnail setting are derived from settings page
 + Viewing images in a folder can now be viewed using jcarousel lite.
++ Titles appear under pinned folder items.
